--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: '3.8'
-
 services:
   php:
-    # ...
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - PHP_VERSION=${PHP_VERSION}
     volumes:
       - ./public:/var/www/html
 
   nginx:
-    # ...
+    image: nginx:stable
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
       - ./public:/var/www/html
       - ./nginx/conf.d:/etc/nginx/conf.d
@@ -16,9 +21,4 @@ services:
       - php
     environment:
       - VIEW_URL=${VIEW_URL}
-    command: >
-      /bin/sh -c "
-        envsubst '$$VIEW_URL' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf.temp &&
-        mv /etc/nginx/conf.d/default.conf.temp /etc/nginx/conf.d/default.conf &&
-        nginx -g 'daemon off;'
-      "
+      - SSL=${SSL}
