--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,4 @@ services:
     environment:
       - VIEW_URL=${VIEW_URL}
       - SSL=${SSL}
+    command: /bin/sh -c "envsubst '$$VIEW_URL $$SSL' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
