indexの認識できるように修正

--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -16,7 +16,7 @@ server {
 
     # ...その他の設定
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ index.html index.php$is_args$args;
     }
 
     location ~ \.php$ {
