--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "443:443"
     volumes:
       - ./public:/var/www/html
-      - ./nginx/conf.d/default.conf.template:/etc/nginx/conf.d/default.conf.template
+      - ./nginx/conf.d:/etc/nginx/conf.d
       - ./certs:/etc/nginx/certs
     depends_on:
       - php
